--- a/productos.html
+++ b/productos.html
@@ -8,25 +8,23 @@
 </head>
 <body>
     <header>
-        <br>
+    <br>
         <!--Nombre de nuestra empresa-->
         <h1 class="title">Neko no Mori</h1>
         <p class="subtitle">Coffe and cats</p>
-        <nav>
-            <ul>
+      <nav>
+        <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Formulario de usuario</a></li>
-            </ul>
-        </nav>
-        
-    </header>
-    <main >
+        </ul>
+      </nav>
+  </header>
+    <main class="mainProd">
 
         <section id="productos" class="margen">
-            <br><br><br><br><br><br>
             <div class="header-prod">
                 <h2>Productos</h2>
 
